arguments. The new syntax is documented in the Guile Reference manual.

** New line or field iteration procedures in (ice-9 rdelim)

(ice-9 rdelim) has three new procedures: for-rdelim-from-port,
for-delimited-from-port and for-line-in-file. Of these, for-line-in-file
is helpful in the common situation where you want a procedure applied to
every line in a file.

* Changes to the distribution

* Build system changes

** -Werror=array-bounds is now added to CFLAGS when available
   This catches <https://bugs.gnu.org/76907>

* Bug fixes

** `basename` now checks the suffix against the base name, not the full path
   (<https://bugs.gnu.org/69437>)
** test-hashing should now work on 32-bit systems
** GUILE-VERSION changes should propagate to .version and relevant Makefiles
   (<https://bugs.gnu.org/72084>)
** Compiler no longer crashes when building Guile on 32-bit platforms
   (<https://bugs.gnu.org/71891>)
** Compiler no longer crashes when inlining 3.0.9 procedure with kw args
   (<https://bugs.gnu.org/72936>)
** Guile is compiled with -fexcess-precision=standard for i[3456]86 when possible
   (<https://bugs.gnu.org/43262>)
** Fix setjmp/longjmp-related crashes on Windows
   (<https://bugs.gnu.org/73167>)
** Fix portability issues for macOS
   (<https://bugs.gnu.org/72547>)
** Fix compilation with GCC 14 and musl on 32-bit systems
   (<https://bugs.gnu.org/73835>)
** Immutable stringbufs are now 8-byte aligned on all systems
   Previously they could end up with an alignment that violated the type
   tag for their type (e.g. ending up tagged as immediates SCM_IMP()).
** `readdir` and `ttyname` now release scm_i_misc_mutex during asyncs
   This avoids potential deadlocks.
** Displaying a `port` won't fail when `ttyname` returns ENODEV
   `ttyname` may return ENODEV even when the port `isatty()`, and
   previously Guile would pass through the related exception.  Now it
   prints the file descriptor instead (as it does when `ttyname` isn't