@@ -45,6 +45,10 @@ for-delimited-from-port and for-line-in-file. Of these, for-line-in-file
 is helpful in the common situation where you want a procedure applied to
 every line in a file.
 
+* Performance improvements
+
+** `copy-file` now relies on `sendfile` rather than a read/write loop
+
 * Changes to the distribution
 
 * Build system changes
